--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"></li>
             </ul>
-            <p class="text-center text-muted">Mandir Marg, Sector 12, Rama Krishna Puram, New Delhi - 110022</p>
+            <p class="text-center text-muted">Kaifi Azmi Marg, Sector 12, Rama Krishna Puram, New Delhi - 110022</p>
         </footer>
     </div>
 </body>
